# lofi

./: .gitignore  README.md
Lofi-launcher/: CMakeLists.txt  launcher.cpp  launcher.h
lofi/: CMakeLists.txt  Makefile  ini_parser.cpp  ini_parser.h  launcher.cpp  launcher.h  main.cpp
